--- a/Aulas/Aulas/Views/Cursos/Create.cshtml
+++ b/Aulas/Aulas/Views/Cursos/Create.cshtml
@@ -1,36 +1,46 @@
 ﻿@model Aulas.Models.Cursos
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Adicionar Curso";
 }
 
-<h1>Create</h1>
+<h1>Adicionar um novo curso</h1>
 
-<h4>Cursos</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
+
+        @*
+            o 'form' é o objeto que transporta os nossos dados
+            para o Servidor
+        *@
         <form asp-action="Create">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+         
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Logotipo" class="control-label"></label>
-                <input asp-for="Logotipo" class="form-control" />
-                <span asp-validation-for="Logotipo" class="text-danger"></span>
+                <input type="file" accept=".png,.jpg,.jpeg" class="form-control" />
+            <span asp-validation-for="Logotipo" class="text-danger"></span>
+
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Adicionar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <br />
+    <a asp-action="Index">Regressar à listagem dos cursos</a>
 </div>
 
 @section Scripts {
