--- a/Aulas/Aulas/Views/Cursos/Create.cshtml
+++ b/Aulas/Aulas/Views/Cursos/Create.cshtml
@@ -20,7 +20,7 @@
                 qd se pretende enviar ficheiros para o Servidor
                 o FORM tem de ser formatado com enctype="multipart/form-data"
             *@
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div asp-validation-summary="All" class="text-danger"></div>
          
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
