--- a/Aulas/Aulas/Views/UnidadesCurriculares/Details.cshtml
+++ b/Aulas/Aulas/Views/UnidadesCurriculares/Details.cshtml
@@ -1,42 +1,64 @@
 ﻿@model Aulas.Models.UnidadesCurriculares
 
 @{
-    ViewData["Title"] = "Details";
+   ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
-    <h4>UnidadesCurriculares</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AnoCurricular)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AnoCurricular)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Semestre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Semestre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Curso)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Curso.Nome)
-        </dd>
-    </dl>
+   <h4>
+      Unidade Curricular <br />
+      <i> @Model.Nome </i>
+   </h4>
+
+   <hr />
+   <dl class="row">
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.Nome)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.Nome)
+      </dd>
+
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.AnoCurricular)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.AnoCurricular)
+      </dd>
+
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.Semestre)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.Semestre)
+      </dd>
+
+      <dt class="col-sm-2">
+         @Html.DisplayNameFor(model => model.Curso)
+      </dt>
+      <dd class="col-sm-10">
+         @Html.DisplayFor(model => model.Curso.Nome)
+      </dd>
+
+      <dt class="col-sm-2">
+         Lista de Professores
+      </dt>
+      <dd class="col-sm-10">
+         <ul>
+            @foreach (var prof in Model.ListaProfessores ?? Enumerable.Empty<Professores>()) {
+               <li>
+                  @prof.Nome
+               </li>
+            }
+         </ul>
+      </dd>
+
+
+   </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+   <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+   <a asp-action="Index">Back to List</a>
 </div>
