--- a/Aulas/Aulas/Views/UnidadesCurriculares/Details.cshtml
+++ b/Aulas/Aulas/Views/UnidadesCurriculares/Details.cshtml
@@ -39,7 +39,10 @@
          @Html.DisplayNameFor(model => model.Curso)
       </dt>
       <dd class="col-sm-10">
-         @Html.DisplayFor(model => model.Curso.Nome)
+         <a asp-action="Details" asp-controller="Cursos" asp-route-id="@Model.CursoFK">
+            @Html.DisplayFor(model => model.Curso.Nome)
+            @*  @Model.Curso.Nome   *@
+         </a>
       </dd>
 
       <dt class="col-sm-2">
@@ -49,7 +52,11 @@
          <ul>
             @foreach (var prof in Model.ListaProfessores ?? Enumerable.Empty<Professores>()) {
                <li>
-                  @prof.Nome
+                  <a asp-action="Details"
+                     asp-controller="Professores"
+                     asp-route-id="@Model.Id">
+                     @prof.Nome
+                  </a>
                </li>
             }
          </ul>
